<!--
  Copyright 2011 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<resources>
    <string name="app_name">簡単帳簿</string>
    <string name="alternate_title">An alternate title that is long</string>
    <string name="toggle_title">Toggle title</string>

    <string name="menu_refresh">Refresh</string>
    <string name="menu_search">Search</string>
    <string name="menu_share">Share</string>
    <string name="menu_month_select">月選択</string>
    <string-array name="date_list">
        <item >今日</item>
        <item >指定日</item>
        <item >指定月</item>
    </string-array>
    <string name="add_button">追加</string>
    <string name="sum">合計</string>
    <string name="goods">商品</string>
    <string name="plice">値段</string>
    <string name="hint_name">お弁当</string>
    <string name="hint_plice">500</string>
    <string name="yen">円</string>
    <string name="menu_yesterday">昨日へ</string>
    <string name="add_positive_button">追加</string>
    <string name="add_negative_button">キャンセル</string>
    <string name="when_month_add_button">月表示時は追加できません</string>
    <string name="when_mont_back_to_yesterday">先月には戻れないんです</string>
    <string name="delete_check">確認</string>
    <string name="when_month_delete">ここからは削除できません</string>
    <string name="delete_positive_button">削除</string>
    <string name="over_max_size">これ以上追加できません</string>
</resources>
