<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/add_dialog_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goods"
            android:textAppearance="?android:attr/textAppearanceLarge" android:textColor="@color/dialog_text_color"/>

        <EditText
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:ems="10"
            android:hint="@string/hint_name" >

            <requestFocus />
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plice"
            android:textAppearance="?android:attr/textAppearanceLarge" android:textColor="@color/dialog_text_color"/>

        <EditText
            android:id="@+id/plice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:ems="10"
            android:hint="@string/hint_plice"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yen"
            android:textAppearance="?android:attr/textAppearanceLarge" android:textColor="@color/dialog_text_color"/>
    </TableRow>

</TableLayout>